drkns 05.04.2017 20:10:41 +0000 - build 4931

1. Уточнение 4928.

2. Пара мелочей.

zg 05.04.2017 20:41:01 +0200 - build 4930

1. 0003419: Crash при ресайзе окна содержащего открытый выпадающий спискок.

svs 02.04.2017 20:22:22 +0300 - build 4929

1. SQLite 3.18.0

drkns 01.04.2017 13:54:43 +0000 - build 4928

1. Рефакторинг.

shmuel 28.03.2017 13:40:20 +0200 - build 4927

1. M#3415: ошибка в menu.itemstatus

drkns 26.03.2017 12:56:32 +0000 - build 4926

1. Рефакторинг.

zg 26.03.2017 14:48:27 +0200 - build 4925

1. RestoreScreen сразу восстанавливает содержимое экрана.

drkns 24.03.2017 18:18:14 +0000 - build 4924

1. Уточнение 4923.

drkns 23.03.2017 23:28:58 +0000 - build 4923

1. Рефакторинг.

w17 23.03.2017 21:39:02 +0300 - build 4922

1. forum: Автоматическая замена шары на букву диска
   При переходе из списка шар сервера к выделенному элементу по Enter теперь не происходит
   переход к диску (если он назначен), по CtrlPgDn - старое поведение (если есть диск - переход к нему).

drkns 21.03.2017 20:39:52 +0000 - build 4921

1. From the forum: Crash in cancelled file edit in NetBox

drkns 21.03.2017 01:31:42 +0000 - build 4920

1. Не всегда загружались отладочные символы.

2. Рефакторинг.

drkns 20.03.2017 23:25:32 +0000 - build 4919

1. Уточнение 4888.

drkns 16.03.2017 23:14:59 +0000 - build 4918

1. Рефакторинг.

shmuel 15.03.2017 21:40:52 +0200 - build 4917

1. Уберём нестандартное поведение клавиш Right и Left при перемещении между чекбоксами в диалоге.
   (Если со временем выявится, что прежнее поведение предпочтительнее - вернём прежнее).
   Радиобаттоны не трогаем, так как повлияет на диалог выбора цвета.

drkns 15.03.2017 11:30:29 +0000 - build 4916

1. Уточнение 4907.

2. Рефакторинг.

drkns 13.03.2017 15:01:25 +0000 - build 4915

1. Коррекция обработки SEH-исключений в неосновных нитях.

drkns 13.03.2017 13:39:47 +0000 - build 4914

1. С форума: Удаляется архив, содержащий другой архив

drkns 11.03.2017 00:05:34 +0000 - build 4913
